// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton render disabled 1`] = `
<Radio
  className=""
  id="radio-"
  isChecked={false}
  isDisabled={true}
  isValid={true}
  label=""
  onChange={[Function]}
  some="input"
  value=""
/>
`;

exports[`RadioButton render with default props 1`] = `
<Radio
  className=""
  id="radio-"
  isChecked={false}
  isDisabled={false}
  isValid={true}
  label=""
  onChange={[Function]}
  some="input"
  value=""
/>
`;

exports[`RadioButton render with item 1`] = `
<Radio
  className=""
  id="radio-some-value"
  isChecked={false}
  isDisabled={false}
  isValid={true}
  label="some-label"
  onChange={[Function]}
  some="input"
  value="some-value"
/>
`;
